--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -4,11 +4,14 @@
     justify-content: top;
     align-items: center;
     background-color: rgb(212, 212, 212);
-    height: 300px;
+    height: 350px;
     width: 200px;
     border: 1px solid black;
     border-radius: 10px;
     margin: 5px;
+}
+.card:hover{
+    cursor: pointer;
 }
 
 .titleCard {
@@ -31,4 +34,8 @@ font-size: smaller;
 }
 .subtitleCard{
     font-size: smaller;
+    overflow: auto;
+    width: 90%;
+    margin: 5px;
+    height: 90px;
 }
